# dirage2

./: CMakeLists.txt  Containerfile  README.md  agechart.cpp  agechart.h  agechartitemdelegate.cpp  agechartitemdelegate.h  buildah.sh  chartcalculatorservice.cpp  chartcalculatorservice.h  controller.cpp  controller.h  dirage2.desktop  dirmodel.cpp  dirmodel.h  dirtree.cpp  dirtree.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  savereportservice.cpp  savereportservice.h  scannerservice.cpp  scannerservice.h  searchservice.cpp  searchservice.h
